name:           husky
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple

executable husky
  hs-source-dirs:  src
  main-is:         Construct.hs
  build-depends:   
                   base >= 4,
                   binary
  ghc-options:     -Wall
  extensions:      ScopedTypeVariables

